--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ tasks will have name, description, due date, priority, completion status
 create a database and connect to it
 create database tables for users and for tasks
 cursor.execute("CREATE TABLE users(id INTEGER PRIMARY KEY, username TEXT NOT NULL, hash TEXT NOT NULL)")
-cursor.execute("CREATE TABLE tasks(id INTEGER PRIMARY KEY, user_id INTEGER NOT NULL, task_name TEXT NOT NULL, due_date TEXT, completion_status TEXT, priority TEXT, details TEXT, FOREIGN KEY (user_id) REFERENCES users (id))")
+cursor.execute("CREATE TABLE tasks(id INTEGER PRIMARY KEY, user_id INTEGER NOT NULL, task TEXT NOT NULL, due TEXT, completion_status TEXT, priority TEXT, details TEXT, FOREIGN KEY (user_id) REFERENCES users (id))")
 connection.commit()
 
 
