--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,16 @@
 user registration
-logging in
+login
 
 
-task creation, editing, deleting
+task creation, updating, deleting
 tasks will have name, description, due date, priority, completion status
-
 
 create a database and connect to it
 create database tables for users and for tasks
 cursor.execute("CREATE TABLE users(id INTEGER PRIMARY KEY, username TEXT NOT NULL, hash TEXT NOT NULL)")
 cursor.execute("CREATE TABLE tasks(id INTEGER PRIMARY KEY, user_id INTEGER NOT NULL, task TEXT NOT NULL, due TEXT, completion_status TEXT, priority TEXT, details TEXT, FOREIGN KEY (user_id) REFERENCES users (id))")
-connection.commit()
 
-
-flask routes for homepage (view of all tasks and new task creation), registration, login
+flask routes for homepage, registration, login, logout, creating updating and deleting tasks, 
 
 html templates for each view
 
